# BinaryView

./: .gitignore  CMakeLists.txt  README.md  main.cpp
PE/: PE.cpp  PE.h
widgets/: widgets.cpp  widgets.h
